HTTPCORE-13, take 1 plus JavaDoc fixes
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@449756 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-main/src/main/java/org/apache/http/protocol/package.html
+++ b/module-main/src/main/java/org/apache/http/protocol/package.html
@@ -45,8 +45,8 @@ HTTP components provides an execution framework that sets up
 some of the headers before sending a message, and interprets
 headers when a message has been received.
 <br/>
-An HTTP {@link org.apache.http.protocol.AbstractHttpProcessor processor}
-keeps lists of so-called interceptors that will be executed
+An HTTP {@link org.apache.http.protocol.HttpProcessor processor}
+typically keeps lists of so-called interceptors that will be executed
 before a message is sent and after it has been received.
 An application should initialize a processor, set up the lists
 with the required and desired processors, and then communicate
