--- a/module-main/src/main/java/org/apache/http/util/package.html
+++ b/module-main/src/main/java/org/apache/http/util/package.html
@@ -32,7 +32,12 @@
 -->
 </head>
 <body>
-Utility classes with static helper methods for various purposes.
+Mostly utility classes with static helper methods for various purposes.
+
+The helper classes for resizable
+{@link org.apache.http.util.ByteArrayBuffer byte} and
+{@link org.apache.http.util.CharArrayBuffer char} arrays
+do not fall into this category.
 
 </body>
 </html>
