Moved chunked, content length delimited, and identity input / output stream implementations to the impl package
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@503192 13f79535-47bb-0310-9956-ffa450edef68

--- a/module-main/src/main/java/org/apache/http/impl/io/package.html
+++ b/module-main/src/main/java/org/apache/http/impl/io/package.html
@@ -37,5 +37,23 @@
 Default implementations for interfaces in
 {@link org.apache.http.io org.apache.http.io}.
 
+<br/>
+
+The data {@link org.apache.http.io.HttpDataTransmitter transmitter}
+and {@link org.apache.http.io.HttpDataReceiver receiver} interfaces
+provide an abstraction from
+<code>java.io</code> and <code>java.nio</code>.
+These interfaces are adapted to the plain
+{@link org.apache.http.io.HttpDataOutputStream output} and
+{@link org.apache.http.io.HttpDataInputStream input} streams
+used in the {@link org.apache.http core API}.
+
+<br/>
+
+There are implementations of the transport encodings used by HTTP,
+in particular the chunked encoding for
+{@link org.apache.http.io.ChunkedOutputStream sending} and
+{@link org.apache.http.io.ChunkedInputStream receiving} entities.
+
 </body>
 </html>
