--- a/module-main/src/main/java/org/apache/http/impl/io/package.html
+++ b/module-main/src/main/java/org/apache/http/impl/io/package.html
@@ -44,16 +44,15 @@ and {@link org.apache.http.io.HttpDataReceiver receiver} interfaces
 provide an abstraction from
 <code>java.io</code> and <code>java.nio</code>.
 These interfaces are adapted to the plain
-{@link org.apache.http.io.HttpDataOutputStream output} and
-{@link org.apache.http.io.HttpDataInputStream input} streams
-used in the {@link org.apache.http core API}.
+{@link org.apache.http.impl.io.HttpDataOutputStream output} and
+{@link org.apache.http.impl.io.HttpDataInputStream input} streams.
 
 <br/>
 
 There are implementations of the transport encodings used by HTTP,
 in particular the chunked encoding for
-{@link org.apache.http.io.ChunkedOutputStream sending} and
-{@link org.apache.http.io.ChunkedInputStream receiving} entities.
+{@link org.apache.http.impl.io.ChunkedOutputStream sending} and
+{@link org.apache.http.impl.io.ChunkedInputStream receiving} entities.
 
 </body>
 </html>
