--- a/module-main/src/main/java/org/apache/http/entity/package.html
+++ b/module-main/src/main/java/org/apache/http/entity/package.html
@@ -38,14 +38,15 @@ Representations for HTTP message entities.
 
 An {@link org.apache.http.HttpEntity entity} is the optional content of a
 {@link org.apache.http.HttpMessage message}.
-You'll find a basic selection of entity implementations here.
-If you need to send an entity, you can provide it for example as a
+This package provides a basic selection of entity implementations 
+that can obtain content from
 {@link org.apache.http.entity.ByteArrayEntity byte array},
 {@link org.apache.http.entity.StringEntity string},
 {@link org.apache.http.entity.FileEntity file}, or through an arbitrary
 {@link org.apache.http.entity.InputStreamEntity input stream}.
-If you receive a message with an entity, you typically get that as a
-{@link org.apache.http.entity.BasicHttpEntity basic} entity.
+If a message is received from an open connection, usually it is 
+represented by 
+{@link org.apache.http.entity.BasicHttpEntity streamed} entity.
 Entity implementations can be
 {@link org.apache.http.entity.HttpEntityWrapper wrapped},
 for example to
