--- a/module-main/src/main/java/org/apache/http/io/package.html
+++ b/module-main/src/main/java/org/apache/http/io/package.html
@@ -34,14 +34,9 @@
 -->
 </head>
 <body>
-The transport layer abstraction of the HTTP components.
-
-This layer is used to transfer messages over connections.
-Connections are typically based on sockets: plain or secure,
-direct or via SOCKS hosts, with bandwidth throttling, or
-whatever else you might think of.
-However, opening connections is not within the responsibility
-of HttpCore.
-
+The blocking I/O abstraction of the HTTP components.
+<p/>
+This layer defines interfaces for transferring basic elements of 
+HTTP messages over connections.
 </body>
 </html>
