--- a/module-main/src/main/java/org/apache/http/util/package.html
+++ b/module-main/src/main/java/org/apache/http/util/package.html
@@ -34,12 +34,9 @@
 -->
 </head>
 <body>
-Mostly utility classes with static helper methods for various purposes.
-
-The helper classes for resizable
+Resizable
 {@link org.apache.http.util.ByteArrayBuffer byte} and
 {@link org.apache.http.util.CharArrayBuffer char} arrays
-do not fall into this category.
-
+and various utility classes with static helper methods.
 </body>
 </html>
