--- a/module-main/src/main/java/org/apache/http/impl/entity/package.html
+++ b/module-main/src/main/java/org/apache/http/impl/entity/package.html
@@ -35,7 +35,8 @@
 </head>
 <body>
 Default implementations for interfaces in
-{@link org.apache.http.entity org.apache.http.entity}.
+{@link org.apache.http.entity org.apache.http.entity} and provides utility
+classes for serialization and deserialization of HTTP content entities.
 
 </body>
 </html>
