--- a/module-main/src/main/java/org/apache/http/message/package.html
+++ b/module-main/src/main/java/org/apache/http/message/package.html
@@ -34,9 +34,7 @@
 -->
 </head>
 <body>
-A selection of HTTP
-{@link org.apache.http.message.AbstractHttpMessage message}
-implementations.
+A selection of HTTP message implementations.
 
 There are basic implementations for HTTP requests
 {@link org.apache.http.message.BasicHttpEntityEnclosingRequest with}
