--- a/module-main/src/main/java/org/apache/http/package.html
+++ b/module-main/src/main/java/org/apache/http/package.html
@@ -34,7 +34,7 @@
 -->
 </head>
 <body>
-The core interfaces and classes of the HTTP components.
+The core HTTP components (HttpCore).
 
 These deal with the fundamental things required for using the
 HTTP protocol, such as representing a
