--- a/module-nio/src/main/java/org/apache/http/nio/util/package.html
+++ b/module-nio/src/main/java/org/apache/http/nio/util/package.html
@@ -1,7 +1,10 @@
+<html>
+<head>
+<!--
 /*
- * $HeadURL$
- * $Revision$
- * $Date$
+ * $HeadURL: $
+ * $Revision: $
+ * $Date: $
  *
  * ====================================================================
  * Licensed to the Apache Software Foundation (ASF) under one
@@ -28,19 +31,10 @@
  * <http://www.apache.org/>.
  *
  */
-
-package org.apache.http.nio.util;
-
-import java.nio.ByteBuffer;
-
-/**
- * Allocates {@link ByteBuffer} instances using 
- * {@link ByteBuffer#allocate(int)}.
- */
-public class HeapByteBufferAllocator implements ByteBufferAllocator {
-
-    public ByteBuffer allocate(int size) {
-        return ByteBuffer.allocate(size);
-    }
-
-}
+-->
+</head>
+<body>
+Various buffering primitives intended to facilitate content streaming for
+non-blocking HTTP connections.
+</body>
+</html>
