--- a/module-main/src/main/java/org/apache/http/params/package.html
+++ b/module-main/src/main/java/org/apache/http/params/package.html
@@ -34,7 +34,7 @@
 -->
 </head>
 <body>
-The parameterization framework for HTTP components.
-
+The parameterization framework for HTTP components. This package also provides 
+core protocol and I/O parameters.
 </body>
 </html>
