--- a/module-nio/src/main/java/org/apache/http/impl/nio/reactor/package.html
+++ b/module-nio/src/main/java/org/apache/http/impl/nio/reactor/package.html
@@ -34,8 +34,8 @@
 -->
 </head>
 <body>
-NIO based implementations of HttpCore interfaces.
-This includes default implementations for the interfaces in
-{@link org.apache.http.nio org.apache.http.nio}.
+Default implementations for interfaces in 
+{@link org.apache.http.nio org.apache.http.nio} including default 
+I/O reactor implementations and support for SSL/TLS transport security. 
 </body>
 </html>
