--- a/module-nio/src/main/java/org/apache/http/impl/nio/codecs/package.html
+++ b/module-nio/src/main/java/org/apache/http/impl/nio/codecs/package.html
@@ -2,9 +2,9 @@
 <head>
 <!--
 /*
- * $HeadURL$
- * $Revision$
- * $Date$
+ * $HeadURL: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-main/src/main/java/org/apache/http/impl/io/package.html $
+ * $Revision: 567360 $
+ * $Date: 2007-08-19 08:49:21 +0200 (Sun, 19 Aug 2007) $
  *
  * ====================================================================
  * Licensed to the Apache Software Foundation (ASF) under one
@@ -35,14 +35,14 @@
 </head>
 <body>
 Default implementations for interfaces in
-{@link org.apache.http.io org.apache.http.io}.
+{@link org.apache.http.io org.apache.http.nio.codecs}.
 
 <br/>
 
 There are implementations of the transport encodings used by HTTP,
 in particular the chunked coding for
-{@link org.apache.http.impl.io.ChunkedOutputStream sending} and
-{@link org.apache.http.impl.io.ChunkedInputStream receiving} entities.
+{@link org.apache.http.impl.nio.codecs.ChunkEncoder sending} and
+{@link org.apache.http.impl.nio.codecs.ChunkDecoder receiving} entities.
 
 </body>
 </html>
