--- a/httpcore-nio/src/main/java/org/apache/http/nio/package.html
+++ b/httpcore-nio/src/main/java/org/apache/http/nio/package.html
@@ -30,10 +30,9 @@
 -->
 </head>
 <body>
-The core HTTP components based on non-blocking I/O model (HttpCore NIO).
+Core HTTP components based on the non-blocking I/O model.
 <p/>
 This layer defines interfaces for transferring HTTP messages over non-blocking
-HTTP connections and protocol handlers for processing HTTP messages
-asynchronously.
+HTTP connections and event handlers for processing HTTP messages asynchronously.
 </body>
 </html>
