--- a/httpcore-nio/src/main/java/org/apache/http/nio/pool/package.html
+++ b/httpcore-nio/src/main/java/org/apache/http/nio/pool/package.html
@@ -30,6 +30,6 @@
 -->
 </head>
 <body>
-Basic HTTP message implementations.
+Asynchronous (non-blocking) connection pool components.
 </body>
 </html>
