--- a/httpcore-nio/src/main/java/org/apache/http/nio/protocol/package.html
+++ b/httpcore-nio/src/main/java/org/apache/http/nio/protocol/package.html
@@ -30,7 +30,6 @@
 -->
 </head>
 <body>
-Non-blocking HTTP protocol execution framework. This package contains protocol
-handler implementations based on NIO model.
+Asynchronous HTTP protocol handlers based on the non-blocking I/O model.
 </body>
 </html>
