--- a/httpcore/src/main/java/org/apache/http/entity/package.html
+++ b/httpcore/src/main/java/org/apache/http/entity/package.html
@@ -30,7 +30,7 @@
 -->
 </head>
 <body>
-Representations for HTTP message entities.
+Common HTTP entity implementations.
 
 An {@link org.apache.http.HttpEntity entity} is the optional content of a
 {@link org.apache.http.HttpMessage message}.
