--- a/httpcore/src/main/java/org/apache/http/impl/pool/package.html
+++ b/httpcore/src/main/java/org/apache/http/impl/pool/package.html
@@ -30,6 +30,7 @@
 -->
 </head>
 <body>
-Basic HTTP message implementations.
+Basic implementations for interfaces in
+{@link org.apache.http.pool org.apache.http.pool}.
 </body>
 </html>
