--- a/httpcore/src/main/java/org/apache/http/io/package.html
+++ b/httpcore/src/main/java/org/apache/http/io/package.html
@@ -30,7 +30,7 @@
 -->
 </head>
 <body>
-The blocking I/O abstraction of the HTTP components.
+Blocking I/O session buffer, message parser / writer interfaces.
 <p/>
 This layer defines interfaces for transferring basic elements of
 HTTP messages over connections.
