--- a/httpcore/src/main/java/org/apache/http/package.html
+++ b/httpcore/src/main/java/org/apache/http/package.html
@@ -30,7 +30,7 @@
 -->
 </head>
 <body>
-The core HTTP components (HttpCore).
+Core HTTP components based on the blocking I/O model.
 
 These deal with the fundamental things required for using the
 HTTP protocol, such as representing a
