--- a/httpcore/src/main/java/org/apache/http/protocol/package.html
+++ b/httpcore/src/main/java/org/apache/http/protocol/package.html
@@ -30,8 +30,7 @@
 -->
 </head>
 <body>
-HTTP protocol execution framework. This package contains common protocol
-aspects implemented as protocol interceptors  as well as protocol handler
-implementations based on classic (blocking) I/O model.
+HTTP protocol execution framework and synchronous HTTP protocol handlers 
+based on the blocking I/O model.
 </body>
 </html>
