--- a/httpcore-nio/src/main/java/org/apache/http/impl/nio/pool/package.html
+++ b/httpcore-nio/src/main/java/org/apache/http/impl/nio/pool/package.html
@@ -30,6 +30,7 @@
 -->
 </head>
 <body>
-Basic HTTP message implementations.
+Basic implementations for interfaces in
+{@link org.apache.http.nio.pool org.apache.http.nio.pool}.
 </body>
 </html>
