--- a/httpcore/src/main/java/org/apache/http/annotation/package.html
+++ b/httpcore/src/main/java/org/apache/http/annotation/package.html
@@ -30,6 +30,8 @@
 -->
 </head>
 <body>
-Basic HTTP message implementations.
+Thread-safety annotations based on JCIP-ANNOTATIONS
+<br/>
+Copyright (c) 2005 Brian Goetz and Tim Peierls. See http://www.jcip.net
 </body>
 </html>
